--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,6 +1,11 @@
 \chapter{Preparation of Datasets}
 \label{chap:preparations data sets}
 
+\section{Automated Data Collection}
+
+Build Netatmo api connector, load data
+
+
 - overview of sources for good datasets for temperature and climate related research
 
 goal:
