--- a/references.bib
+++ b/references.bib
@@ -103,3 +103,246 @@
   pages={1545--1560},
   year={2015}
 }
+
+% climatology
+
+@book{howard1833climate,
+  title={The climate of London: deduced from meteorological observations made in the metropolis and at various places around it},
+  author={Howard, Luke},
+  volume={3},
+  year={1833},
+  publisher={Harvey and Darton, J. and A. Arch, Longman, Hatchard, S. Highley [and] R. Hunter}
+}
+
+@book{sundborg1951climatological,
+  title={Climatological studies in Uppsala: With special regard to the temperature conditions in the urban area.},
+  author={Sundborg, {\AA}ke},
+  year={1951}
+}
+
+@article{stewart2011systematic,
+  title={A systematic review and scientific critique of methodology in modern urban heat island literature},
+  author={Stewart, Iain D},
+  journal={International Journal of Climatology},
+  volume={31},
+  number={2},
+  pages={200--217},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{stewart2012local,
+  title={Local climate zones for urban temperature studies},
+  author={Stewart, Ian D and Oke, Tim R},
+  journal={Bulletin of the American Meteorological Society},
+  volume={93},
+  number={12},
+  pages={1879--1900},
+  year={2012},
+  publisher={American Meteorological Society}
+}
+
+@inproceedings{stewart2009newly,
+  title={Newly developed “thermal climate zones” for defining and measuring urban heat island magnitude in the canopy layer},
+  author={Stewart, Iain and Oke, TR},
+  booktitle={Eighth Symposium on Urban Environment, Phoenix, AZ},
+  year={2009}
+}
+
+@article{lowry1977empirical,
+  title={Empirical estimation of urban effects on climate: a problem analysis},
+  author={Lowry, William P},
+  journal={Journal of Applied Meteorology and Climatology},
+  volume={16},
+  number={2},
+  pages={129--135},
+  year={1977}
+}
+
+@article{balchin1947micro,
+  title={A micro-climatological investigation of bath and the surrounding district},
+  author={Balchin, William George Victor and Pye, Norman},
+  journal={Quarterly Journal of the Royal Meteorological Society},
+  volume={73},
+  number={317-318},
+  pages={297--323},
+  year={1947},
+  publisher={Wiley Online Library}
+}
+
+@article{peng2012surface,
+  title={Surface urban heat island across 419 global big cities},
+  author={Peng, Shushi and Piao, Shilong and Ciais, Philippe and Friedlingstein, Pierre and Ottle, Catherine and Br{\'e}on, Fran{\c{c}}ois-Marie and Nan, Huijuan and Zhou, Liming and Myneni, Ranga B},
+  journal={Environmental science \& technology},
+  volume={46},
+  number={2},
+  pages={696--703},
+  year={2012},
+  publisher={ACS Publications}
+}
+
+@article{oke1973city,
+  title={City size and the urban heat island},
+  author={Oke, Tim R},
+  journal={Atmospheric Environment (1967)},
+  volume={7},
+  number={8},
+  pages={769--779},
+  year={1973},
+  publisher={Elsevier}
+}
+
+@article{oke1976distinction,
+  title={The distinction between canopy and boundary-layer urban heat islands},
+  author={Oke, Timothy R},
+  journal={Atmosphere},
+  volume={14},
+  number={4},
+  pages={268--277},
+  year={1976},
+  publisher={Taylor \& Francis}
+}
+
+@article{oke2006guideline,
+  author = {Oke, Timothy R},
+  year = {2006},
+  month = {01},
+  pages = {51},
+  title = {Initial guidance to obtain representative meteorological observations at urban sites}
+}
+
+@book{oke2017urban,
+  title={Urban climates},
+  author={Oke, Timothy R and Mills, Gerald and Christen, Andreas and Voogt, James A},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@article{wyngaard1985structure,
+  title={Structure of the planetary boundary layer and implications for its modeling},
+  author={Wyngaard, John C},
+  journal={Journal of Applied Meteorology and Climatology},
+  volume={24},
+  number={11},
+  pages={1131--1142},
+  year={1985}
+}
+
+@article{stoll1992surface,
+  title={Surface-air temperature relationships in the urban environment of Phoenix, Arizona},
+  author={Stoll, Matthew J and Brazel, Anthony J},
+  journal={Physical Geography},
+  volume={13},
+  number={2},
+  pages={160--179},
+  year={1992},
+  publisher={Taylor \& Francis}
+}
+
+@article{kim2021urban,
+  title={Urban heat island (UHI) intensity and magnitude estimations: A systematic literature review},
+  author={Kim, Se Woong and Brown, Robert D},
+  journal={Science of the Total Environment},
+  volume={779},
+  pages={146389},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@book{leclerc2014footprints,
+  title={Footprints in micrometeorology and ecology},
+  author={Leclerc, Monique Y and Foken, Thomas},
+  volume={239},
+  year={2014},
+  publisher={Springer}
+}
+
+% Smart Cities
+
+@article{harrison2010foundations,
+  title={Foundations for smarter cities},
+  author={Harrison, Colin and Eckman, Barbara and Hamilton, Rick and Hartswick, Perry and Kalagnanam, Jayant and Paraszczak, Jurij and Williams, Peter},
+  journal={IBM Journal of research and development},
+  volume={54},
+  number={4},
+  pages={1--16},
+  year={2010},
+  publisher={IBM}
+}
+
+@article{silva2018towards,
+  title={Towards sustainable smart cities: A review of trends, architectures, components, and open challenges in smart cities},
+  author={Silva, Bhagya Nathali and Khan, Murad and Han, Kijun},
+  journal={Sustainable cities and society},
+  volume={38},
+  pages={697--713},
+  year={2018},
+  publisher={Elsevier}
+}
+
+% (Wireless) Sensor networks
+
+@article{chong2003sensor,
+  title={Sensor networks: evolution, opportunities, and challenges},
+  author={Chong, Chee-Yee and Kumar, Srikanta P},
+  journal={Proceedings of the IEEE},
+  volume={91},
+  number={8},
+  pages={1247--1256},
+  year={2003},
+  publisher={IEEE}
+}
+
+@article{castell2017can,
+  title={Can commercial low-cost sensor platforms contribute to air quality monitoring and exposure estimates?},
+  author={Castell, Nuria and Dauge, Franck R and Schneider, Philipp and Vogt, Matthias and Lerner, Uri and Fishbain, Barak and Broday, David and Bartonova, Alena},
+  journal={Environment international},
+  volume={99},
+  pages={293--302},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{lewis2018low,
+  title={Low-cost sensors for the measurement of atmospheric composition: overview of topic and future applications},
+  author={Lewis, Alastair and Peltier, W Richard and von Schneidemesser, Erika},
+  year={2018},
+  publisher={World Meteorological Organization (WMO)}
+}
+
+% Correlation meteological influences
+
+@article{tai2010correlations,
+  title={Correlations between fine particulate matter (PM2. 5) and meteorological variables in the United States: Implications for the sensitivity of PM2. 5 to climate change},
+  author={Tai, Amos PK and Mickley, Loretta J and Jacob, Daniel J},
+  journal={Atmospheric environment},
+  volume={44},
+  number={32},
+  pages={3976--3984},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@book{von2002statistical,
+  title={Statistical analysis in climate research},
+  author={Von Storch, Hans and Zwiers, Francis W},
+  year={2002},
+  publisher={Cambridge university press}
+}
+
+@article{trangmar1986application,
+  title={Application of geostatistics to spatial studies of soil properties},
+  author={Trangmar, Bruce B and Yost, Russel S and Uehara, Goro},
+  journal={Advances in agronomy},
+  volume={38},
+  pages={45--94},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@book{campbell2011introduction,
+  title={Introduction to remote sensing},
+  author={Campbell, James B and Wynne, Randolph H},
+  year={2011},
+  publisher={Guilford Press}
+}
